--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
   "name": "serverless-camp",
   "version": "1.0.0",
-  "description": "",
+  "description": "![Newsletter](https://user-images.githubusercontent.com/69332964/114803220-14269100-9d6d-11eb-9a3a-e92a637e5d79.png)",
   "scripts": {
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "morse-code-converter": "^1.0.2",
+    "node-fetch": "^2.6.0"
+  },
+  "devDependencies": {},
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AnimXhafa97/serverless-camp.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AnimXhafa97/serverless-camp/issues"
+  },
+  "homepage": "https://github.com/AnimXhafa97/serverless-camp#readme"
 }
